kubernetes-old/minecraft/minecraft/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minecraft
  namespace: minecraft
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - name: minecraft
        image: "itzg/minecraft-server:latest"
        ports:
        - containerPort: 25565
          name: minecraft
        - containerPort: 8123
          name: dynmap
        volumeMounts:
          - mountPath: /data
            name: minecraft-data
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: minecraft-pvc
      nodeSelector:
        minecraft-storage: "true"
