kubernetes-old/minecraft/minecraft/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: minecraft-dynmap
  namespace: minecraft
spec:
  ports:
  - port: 80
    targetPort: 8123
    protocol: TCP
  selector:
    app: minecraft
---
kind: Service
apiVersion: v1
metadata:
  name: minecraft
  namespace: minecraft
spec:
  type: NodePort
  selector:
    app: minecraft
  ports:
  - port: 25565
    nodePort: 30010
